[project]
name = "code-mentor-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.121.3",
    "langchain>=1.0.2",
    "langgraph>=1.0.1",
    "uvicorn>=0.38.0",
    "langchain-ollama>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.1",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "transformers>=4.57.1",
    "faiss-cpu>=1.13.0",
    "gitpython>=3.1.45",
    "langchain-huggingface>=1.1.0",
    "sentence-transformers>=5.1.2",
    "langgraph-api>=0.5.27",
]
